--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,5 +24,8 @@ serde_json = "1.0"
 serde_derive = "1.0"
 error-chain = "0.12"
 derive_builder = "0.9"
-reqwest = "0.9"
+reqwest = "0.10"
 sha1 = "0.6"
+
+[dev-dependencies]
+tokio = { version = "0.2", features = ["macros"]}
