--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ path = "src/lib.rs"
 serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
-error-chain = "0.12"
+thiserror = "1.0"
 derive_builder = "0.9"
 reqwest = "0.10"
 sha1 = "0.6"
