--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,9 +23,9 @@ serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
 thiserror = "1.0"
-derive_builder = "0.9"
+derive_builder = "0.12"
 reqwest = "0.11"
-sha1 = "0.6"
+sha1_smol = "1.0"
 
 [dev-dependencies]
 tokio = { version = "1", features = ["macros"] }
